2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: fix for PMC case
 
2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: take --rtc-value

	* dae/oprofiled.c: set headers sensibly for RTC

	* doc/oprofile.1.in: update

	* doc/oprofile.sgml: RTC update

	* events/op_events_descr.c: 
	* events/op_events.c: good name for RTC event 

	* gui/oprof_start.cpp: basic support for RTC

	* module/op_rtc.c: implement and use rtc_value

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: load module at start. Handle CPU_RTC.
	  Avoid sysctl for now on RTC case.

	* dae/oprofiled.c: only read sysctls if PMC. Needs clean.

	* events/op_events.c: add RTC event.

	* events/op_events_desc.c: get CPU type from module. 

	* module/op_init.c: detect CPU_RTC.

	* module/op_nmi.c: setup code moved from op_init.c

	* module/op_rtc.c: enable interrupt, fixed at 128 for now.

	* module/op_x86.c: add Athlon to needs_apic_setup checks

	* module/oprofile.c: use correct interrupt handler based on
	  CPU type

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* op_user.h: add CPU_RTC

	* op_init.c: add FIXMEs

	* op_nmi.c:
	* op_rtc.c:
	* oprofile.h:
	* oprofile.c: implement abstract interrupt handler code

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_config.cpp: fix vmlinux/system.map defaults
 
2002-01-13  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: reject unsupported kernel version
	* module/apic_up_compat.h:
	* module/compat.h: small cleanup
	* module/op_x86.c: ditto, always put apic memory page as
	  non cachable

2002-01-12  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp: implement whitelist for arguments
	  to op_start
 
	* TODO: update
 
2002-01-13  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/apic_up_compat.h:
	* module/op_x86.c: allow to run oprofile when